Codice completo con SpatiaGrid verificato con jpf (da rivedere alcuni commenti)