@@ -4,6 +4,7 @@ import pcd.assignment01.model.Ball;
 import pcd.assignment01.model.Board;
 import pcd.assignment01.model.Board.Winner;
 import pcd.assignment01.util.CyclicBarrier;
+import pcd.assignment01.util.SpatialGrid;
 import pcd.assignment01.view.View;
 import pcd.assignment01.view.ViewModel;
 
@@ -15,23 +16,22 @@ import java.util.List;
  *
  * Multithreading:
  *  - N WorkerThread persistenti lavorano in parallelo ogni tick
- *  - Due CyclicBarrier sincronizzano le fasi: posizioni → collisioni
- *  - Il GameController partecipa alle barrier come N+1-esimo "party"
- *    così può eseguire le operazioni sequenziali (player collisions, checkHoles)
- *    subito dopo la fase 2 senza ulteriore sincronizzazione (non vantaggiosa)
+ *  - Tre CyclicBarrier sincronizzano le fasi:
+ *      posizioni → build griglia (Worker-0) → collisioni
+ *  - Il GameController partecipa a tutte e tre le barrier come N+1-esimo party
  *
  * Flusso per tick:
- *   1. GameController divide balls in N partizioni
- *   2. Chiama startTick() su ogni worker  → worker entrano in fase 1
- *   3. GameController chiama barrierPositions.await() insieme ai worker
- *   4. Worker entrano in fase 2 (collisioni con lock)
- *   5. GameController chiama barrierCollisions.await() insieme ai worker
- *   6. GameController esegue: player vs balls, player vs player, checkHoles
+ *   1. GameController divide balls in N partizioni e chiama startTick()
+ *   2. barrierPositions: tutti finiscono fase 1 (posizioni)
+ *   3. Worker-0 costruisce SpatialGrid; gli altri aspettano a barrierGrid
+ *   4. barrierGrid: griglia pronta, tutti entrano in fase 2
+ *   5. barrierCollisions: tutti finiscono fase 2 (collisioni con griglia)
+ *   6. GameController esegue sequenzialmente: player collisions, checkHoles
  */
 public class GameController {
 
-    //private static final int  TARGET_FPS = 60;
-    //private static final long FRAME_MS   = 1000 / TARGET_FPS;
+    private static final int  TARGET_FPS = 60;
+    private static final long FRAME_MS   = 1000 / TARGET_FPS;
 
     private final Board         board;
     private final ViewModel     viewModel;
@@ -39,18 +39,25 @@ public class GameController {
     private final BotController botController;
 
     // Worker pool
-    private final int              nWorkers;
+    private final int               nWorkers;
     private final List<WorkerThread> workers;
-    private final CyclicBarrier    barrierPositions;
-    private final CyclicBarrier    barrierCollisions;
+    private final CyclicBarrier     barrierPositions;
+    private final CyclicBarrier     barrierGrid;       // nuovo: separa build griglia
+    private final CyclicBarrier     barrierCollisions;
+    private final SpatialGrid       grid;
 
     private volatile boolean running = false;
     private Thread updateThread;
 
+    // Cache partizioni: ricalcolate solo quando cambia il numero di palline
     private List<Ball>       cachedBalls;
     private List<List<Ball>> cachedPartitions;
 
-
+    /**
+     * @param nWorkers numero di WorkerThread (availableProcessors()+1 per convenzione).
+     *                 Le CyclicBarrier vengono costruite con parties = nWorkers+1
+     *                 per includere anche il GameController stesso.
+     */
     public GameController(Board board, ViewModel viewModel, View view, int nWorkers) {
         this.board         = board;
         this.viewModel     = viewModel;
@@ -58,13 +65,20 @@ public class GameController {
         this.botController = new BotController(board);
         this.nWorkers      = nWorkers;
 
-        // parties = nWorkers (worker) + 1 (GameController che partecipa alle barrier)
+        // parties = nWorkers + 1 (GameController partecipa a tutte le barrier)
         this.barrierPositions  = new CyclicBarrier(nWorkers + 1);
+        this.barrierGrid       = new CyclicBarrier(nWorkers + 1);
         this.barrierCollisions = new CyclicBarrier(nWorkers + 1);
+
+        // La griglia viene costruita con i parametri di LargeBoardConf/MassiveBoardConf:
+        // ballRadius = 0.01 per le palline piccole.
+        // getBounds() è chiamato qui dopo board.init() — il campo è già inizializzato.
+        this.grid = new SpatialGrid(board.getBounds(), 0.01);
 
         this.workers = new ArrayList<>(nWorkers);
         for (int i = 0; i < nWorkers; i++) {
-            workers.add(new WorkerThread(i, board, barrierPositions, barrierCollisions));
+            workers.add(new WorkerThread(i, board,
+                    barrierPositions, barrierGrid, barrierCollisions, grid));
         }
     }
 
@@ -81,6 +95,30 @@ public class GameController {
         updateThread.start();
 
         botController.start();
+    }
+
+    /**
+     * Avvia solo i worker e il bot, senza l'updateLoop.
+     * Usato da MainJPF: il loop viene sostituito da chiamate esplicite a doTick().
+     */
+    public void startWorkers() {
+        running = true;
+        workers.forEach(Thread::start);
+        // BotController NON avviato: in modalità JPF il bot introduce
+        // System.currentTimeMillis() e java.util.Random che JPF non modella
+        // correttamente su Java 11+. Le proprietà rilevanti (barrier, lock)
+        // sono verificabili senza il bot.
+    }
+
+    /**
+     * Esegue un singolo tick della fisica in modo sincrono.
+     * Usato da MainJPF per controllare il numero di tick esplorati da JPF.
+     * Non deve essere chiamato insieme all'updateLoop.
+     */
+    public void doTick() {
+        if (!board.isGameOver()) {
+            doParallelUpdate(16); // dt fisso = 16ms (equivalente a 60fps)
+        }
     }
 
     public void stopGame() {
@@ -110,6 +148,10 @@ public class GameController {
                 doParallelUpdate(elapsed);
             }
 
+            // Fix 4: controlla game over subito dopo la fisica, prima del render.
+            // checkHolesAndGameOver() può aver settato isGameOver=true in questo tick:
+            // in quel caso handleGameOver() setta il messaggio e poi renderizziamo
+            // una sola volta con lo stato finale corretto.
             if (board.isGameOver()) {
                 handleGameOver();
                 break;
@@ -124,14 +166,14 @@ public class GameController {
             viewModel.update(board, fps);
             view.render();
 
-            /*long sleepMs = FRAME_MS - (System.currentTimeMillis() - now);
+            long sleepMs = FRAME_MS - (System.currentTimeMillis() - now);
             if (sleepMs > 0) {
                 try { Thread.sleep(sleepMs); }
                 catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
                     break;
                 }
-            }*/
+            }
         }
         running = false;
     }
@@ -141,16 +183,23 @@ public class GameController {
     // -------------------------------------------------------------------------
 
     private void doParallelUpdate(long dt) {
+        // Fix 3: snapshot atomico della lista palline PRIMA di qualsiasi operazione
+        // parallela. getBalls() è synchronized su Board → nessuna race con checkHoles().
+        // La lista snapshot è immutabile durante tutto il tick: i worker la leggono
+        // in sola lettura per le collisioni cross-boundary.
         List<Ball> balls = board.getBalls();
 
+        // Aggiorna player1 e player2 (sequenziale, solo 2 oggetti)
         board.updatePlayers(dt);
 
-        // Ricalcola le partizioni solo se il numero di palline è cambiato (succede quando una pallina entra in buca).
+        // Fix 7: ricalcola le partizioni solo se il numero di palline è cambiato
+        // (succede quando una pallina entra in buca). Evita riallocazione ogni tick.
         if (cachedBalls == null || cachedBalls.size() != balls.size()) {
             cachedPartitions = partition(balls, nWorkers);
             cachedBalls      = balls;
         } else {
             // Aggiorna i riferimenti alle Ball (la lista è nuova ad ogni getBalls())
+            // mantenendo la stessa struttura di partizione
             cachedBalls = balls;
             int idx = 0;
             for (List<Ball> part : cachedPartitions) {
@@ -177,6 +226,17 @@ public class GameController {
         try { barrierPositions.await(); }
         catch (InterruptedException e) {
             // Se il GC viene interrotto, i worker sono già in await() sulla stessa barrier.
+            // Dobbiamo svegliarli prima di uscire, altrimenti restano bloccati per sempre.
+            workers.forEach(WorkerThread::stopWorker);
+            Thread.currentThread().interrupt();
+            return;
+        }
+
+        // GameController partecipa a barrierGrid come N+1-esimo party.
+        // Worker-0 sta costruendo la griglia; il GameController non fa nulla
+        // in questa fase ma deve chiamare await() per far scattare la barrier.
+        try { barrierGrid.await(); }
+        catch (InterruptedException e) {
             workers.forEach(WorkerThread::stopWorker);
             Thread.currentThread().interrupt();
             return;
@@ -190,7 +250,10 @@ public class GameController {
             return;
         }
 
+        // Fase 3 sequenziale: collisioni player vs palline e player vs player
         board.resolvePlayerCollisions();
+
+        // Fase 4 sequenziale: checkHoles + game over
         board.checkHolesAndGameOver();
     }
 
@@ -199,6 +262,8 @@ public class GameController {
     // -------------------------------------------------------------------------
 
     private static <T> List<List<T>> partition(List<T> list, int n) {
+        // Con poche palline (es. MinimalBoardConf) n potrebbe superare list.size():
+        // limitiamo per evitare partizioni vuote che non aggiungono parallelismo.
         n = Math.min(n, Math.max(1, list.size()));
 
         List<List<T>> result = new ArrayList<>(n);
@@ -230,11 +295,14 @@ public class GameController {
     private String buildWinnerMessage(Winner winner) {
         int s1 = board.getScore1();
         int s2 = board.getScore2();
-        return switch (winner) {
-            case PLAYER1 -> "Vittoria Giocatore H (Punti: %d a %d)".formatted(s1, s2);
-            case PLAYER2 -> "Vittoria Giocatore B (Punti: %d a %d)".formatted(s2, s1);
-            case DRAW    -> "Pareggio! (%d a %d)".formatted(s1, s2);
-            case NONE    -> "";
-        };
+        if (winner == Winner.PLAYER1) {
+            return String.format("Vittoria Giocatore H (Punti: %d a %d)", s1, s2);
+        } else if (winner == Winner.PLAYER2) {
+            return String.format("Vittoria Giocatore B (Punti: %d a %d)", s2, s1);
+        } else if (winner == Winner.DRAW) {
+            return String.format("Pareggio! (%d a %d)", s1, s2);
+        } else {
+            return "";
+        }
     }
 }
